Make select box display and add invoiceInfo to initial state

--- a/src/styles/LayoutStyles.css
+++ b/src/styles/LayoutStyles.css
@@ -27,10 +27,13 @@ a {
 
 .TextFieldContainer {
     margin: 40px;
- 
     padding: 20px 25px;
     border: 1px solid grey;
     border-radius: 3px;
+}
+
+.addInvoiceItemButton{
+    margin: 0 40px;
 }
 
 .FormInputGroupContainer {
