--- a/src/styles/LayoutStyles.css
+++ b/src/styles/LayoutStyles.css
@@ -47,7 +47,9 @@ a {
 
 .SecondRowInvoice {
     display: flex;
+    padding-top: 20px;
     justify-content: space-between;
+    align-items: flex-end;
 }
 
 .RemoveInvoiceButton {
@@ -58,6 +60,12 @@ a {
 }
 
 .InvoiceItemTotal {
+    display: flex;
+    justify-content: flex-end;
+    font-weight: bold;
+    align-items: flex-end;
+    margin-bottom: 0;
+    padding-bottom: 5px;
     font-size: 16px;
 }
 
