--- a/src/styles/WorkingDoc.css
+++ b/src/styles/WorkingDoc.css
@@ -14,9 +14,9 @@
 @media only screen and (max-width: 1280px) {
     #workingDocContainer,
     .PageBottomDiv
-     {
+     /* {
         width: 100vw;
-    }
+    } */
     .WorkingDoc-buttonContainer {
         border-top: 2px solid #9c27b0;
     }
