--- a/src/styles/LayoutStyles.css
+++ b/src/styles/LayoutStyles.css
@@ -25,30 +25,34 @@ a {
     margin: 50px;
 }
 
+.InvoiceItems {
+    margin-bottom: 40px;
+    padding: 0 35px;
+}
+
 .TextFieldContainer {
-    margin: 40px auto;
+    margin: 24px auto;
     padding: 30px 25px;
     border: 1px solid grey;
     border-radius: 3px;
     position: relative;
-    max-width: 600px;
+    max-width: 540px;
+}
+
+.MuiSvgIcon-root-179 {
+    
+    font-size: 20px !important;
 }
 
 .SecondRowInvoice {
     padding-top: 20px;
     display: grid;
     grid-template-areas: "main total";
-    grid-template-columns: 2fr 1fr;
+    grid-template-columns: 70% 30%;
 }
 
-.UnitRateTypeGridArea {
-    display: grid;
-    grid-template-areas: "unit rate type";
-    grid-area: main;
-}
-
-.UnitField {
-    grid-area: unit;
+.UnitRateTypeContainer {
+    display: flex;
 }
 
 .FormControlPrepend {
@@ -57,27 +61,19 @@ a {
     justify-content: flex-start;
 }
 
-.SelectField {
-    grid-area: type;
-}
-
 .InvoiceItemTotal {
     margin-left: auto;
-    display: flex;
-    justify-content: flex-end;
     font-weight: bold;
-    align-items: flex-end;
     margin-bottom: 0;
-    padding-bottom: 5px;
     font-size: 16px;
 }
 
-.InvoiceItems {
-    margin: 0;
+.MuiSelect-selectMenu-244 {
+    padding-top: 12px;
 }
 
 .AddInvoiceContainer {
-    margin-left: 40px;
+    margin-left: 20px;
 }
 
 .MuiFormControl-root-225 {
@@ -93,26 +89,27 @@ a {
 
 .RateDollarSymbol {
     display: flex;
-    justify-content: flex-start;
-    font-weight: bold;
     align-items: flex-end;
+    font-weight: bold;
     margin-bottom: 3px;
     padding-bottom: 5px;
     padding-right: 5px;
     font-size: 16px;
 }
 
-
-
 .FormInputGroupContainer {
     display: flex;
 }
 
 .FormHeaderContainer {
+    display: flex;
+    justify-content: center;
     margin-top: 5%;
-    padding-left: 10%;
-    padding-right: 10%;
-    text-align: center;
+}
+
+.Page5-invoiceTitle-177 {
+    font-size: 30px !important;
+    font-weight: bold !important;
 }
 
 .AltFormContainer {
