--- a/src/styles/WorkingDoc.css
+++ b/src/styles/WorkingDoc.css
@@ -1,3 +1,7 @@
+.WorkingDoc {
+    margin-left: 10px;
+}
+
 #workingDocContainer {
     padding: 25px;
 }
@@ -8,16 +12,14 @@
 }
 .Contract-contractContainer {
     height: 610px;
-    overflow-y: scroll;
 }
 
 @media only screen and (max-width: 1280px) {
-    #workingDocContainer,
-    .PageBottomDiv
-     /* {
-        width: 100vw;
-    } */
+
+    .WorkingDoc {
+        margin-left: 0;
+    }
     .WorkingDoc-buttonContainer {
-        border-top: 2px solid #9c27b0;
+        border-top: 2px solid #4caf50;
     }
 }
