--- a/src/styles/LayoutStyles.css
+++ b/src/styles/LayoutStyles.css
@@ -16,7 +16,7 @@ a {
 }
 
 .PageBottomDiv {
-    margin: 0 auto 20px auto;
+    margin: 20px auto;
     display: flex;
     justify-content: center;
 }
