--- a/src/styles/WorkingDoc.css
+++ b/src/styles/WorkingDoc.css
@@ -1,20 +1,33 @@
 #Invoice-Page-Container {
     font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
     box-sizing: border-box;
-    min-height: 720px;
-    padding: 60px;
-    overflow: scroll;
+    height: 950px;
+    margin-left: auto;
+    margin-right: auto;
+    width: 750px;
+    padding: 50px 60px 0 60px;
+    border-top: 3px solid #4caf50;   
 }
-
-/* Top 1/3 of the Invoice */
 
 .Top-Third-Container {
     display: grid;
     grid-template-rows: 50% 50%;
-    grid-template-columns: 20% 60% 20%;
+    grid-template-columns: 25% 55% 20%;
     border-bottom: 2px solid #ccc;
-    height: 250px;
+    height: 226px;
     padding: 20px;
+}
+
+.Middle-Third-Container {
+    font-size: 14px;
+    height: 435px;
+    padding: 20px;
+}
+
+.Bottom-Third-Container {
+    font-size: 14px;
+    padding: 20px;
+    height: 140px;
 }
 
 .Top-Right-Grid-Area {
@@ -24,7 +37,7 @@
 
 #Invoice-Title {
     font-size: 40px;
-    margin-bottom: 0;
+    margin: 0;
 }
 
 #Invoice-Total {
@@ -46,13 +59,6 @@
 }
 
 /* Invoice Items */
-
-.Invoice-Items-Container {
-    font-size: 14px;
-    height: 300px;
-    padding: 20px;
-}
-
 .Line-Items {
     display: grid;
     padding: 10px;
@@ -65,7 +71,6 @@
 
 .Total-Info {
     display: grid;
-    grid-template-rows: 1fr 1fr 1fr;
     grid-row-gap: 10px;
     grid-template-columns: 40% 20% 20% 20%;
     font-size: 14px;
@@ -74,41 +79,50 @@
 }
 
 #Subtotal {
-    grid-area: 1/3/1/4;
+    grid-column-start: 3;
     height: 50%;
     border-bottom: 2px solid gainsboro;
 }
 
+#Subtotal-Price {
+    grid-column-start: 4;
+    border-bottom: 2px solid gainsboro;
+    height: 50%;
+}
+
 #Total {
-    grid-area: 2/3/2/4;
+    grid-column-start: 3;
     height: 50%;
     border-bottom: 2px solid gainsboro;
+}
+
+#Total-Price {
+    grid-column-start: 4;
+    border-bottom: 2px solid gainsboro;
+    height: 50%;
 }
 
 #Amount-Due {
     font-weight: 600;
-    grid-area: 3/3/3/4;
+    grid-column-start: 3;
+    border-bottom: 2px solid gainsboro;
+    height: 50%;
 }
 
-/* Bottom of Invoice */
-
-.Dev-Address {
-    font-size: 14px;
-    padding: 20px;
-    height: 200px;
+#Amount-Price {
+    grid-column-start: 4;
+    border-bottom: 2px solid gainsboro;
+    height: 50%;
 }
 
 .WorkingDoc {
-    margin-left: 10px;
+    margin-top: 20px;
 }
 
 @media only screen and (max-width: 1280px) {
 
     .WorkingDoc {
         margin-left: 0;
-    }
-    #Invoice-Page-Container {
-        border-top: 3px solid #4caf50;
     }
 
 }
