--- a/src/styles/WorkingDoc.css
+++ b/src/styles/WorkingDoc.css
@@ -36,6 +36,7 @@
 }
 
 #Invoice-Title {
+    color: #4caf50;
     font-size: 40px;
     margin: 0;
 }
@@ -55,6 +56,7 @@
 .Client-Customer {
     font-size: 18px;
     margin-top: 0;
+    margin-bottom: 10px;
     text-transform: uppercase;
 }
 
