--- a/src/styles/WorkingDoc.css
+++ b/src/styles/WorkingDoc.css
@@ -1,6 +1,7 @@
 #Invoice-Page-Container {
-    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+    font-family: "Helvetica Neue", sans-serif;
     box-sizing: border-box;
+    position: relative;
     height: 950px;
     margin-left: auto;
     margin-right: auto;
@@ -9,11 +10,16 @@
     border-top: 3px solid #4caf50;   
 }
 
+.Invoice-Settings {
+    position: absolute;
+    top: 15px;
+    right: 30px;
+}
+
 .Top-Third-Container {
     display: grid;
     grid-template-rows: 50% 50%;
     grid-template-columns: 25% 55% 20%;
-    border-bottom: 2px solid #ccc;
     height: 226px;
     padding: 20px;
 }
@@ -21,7 +27,7 @@
 .Middle-Third-Container {
     font-size: 14px;
     height: 435px;
-    padding: 20px;
+    padding: 8px 20px 20px 20px;
 }
 
 .Bottom-Third-Container {
@@ -31,18 +37,20 @@
 }
 
 .Top-Right-Grid-Area {
-    font-size: 14px;
+    font-size: 12px;
+    font-weight: bold;
     grid-area: 1/3/2/3;
 }
 
 #Invoice-Title {
     color: #4caf50;
-    font-size: 40px;
+    font-size: 34px;
     margin: 0;
 }
 
 #Invoice-Total {
-    font-size: 24px;
+    font-size: 22px;
+    font-weight: 500;
 }
 
 #Client-Address-Area {
@@ -54,71 +62,167 @@
 }
 
 .Client-Customer {
-    font-size: 18px;
+    font-size: 14px;
     margin-top: 0;
-    margin-bottom: 10px;
+    margin-bottom: 8px;
     text-transform: uppercase;
 }
 
 /* Invoice Items */
 .Line-Items {
     display: grid;
-    padding: 10px;
-    margin-bottom: 20px;
-    grid-template-columns: 40% 20% 20% 20%;
-    border: 2px solid gainsboro;
+    padding: 14px 10px 8px 10px;
+    grid-template-columns: 40% 20% 18% 22%;
+    border-top: 1px solid gainsboro;
+}
+
+#Item-Total {
+    display: flex;
+    justify-content: flex-end;
+    grid-column-start: 4;
+    padding: 0 0 8px 8px;
+}
+
+#Rate {
+    display: flex;
+    justify-content: flex-end;
+    grid-column-start: 3;
+    padding: 0 0 8px 8px;
 }
 
 /* Subtotal, Total, and Amount-Due */
 
 .Total-Info {
+    margin-top: 50px;
+    justify-items: flex-end;
     display: grid;
-    grid-row-gap: 10px;
-    grid-template-columns: 40% 20% 20% 20%;
+    grid-template-columns: 40% 20% 18% 22%;
     font-size: 14px;
-    height: 180px;
-    border-bottom: 2px solid gainsboro;
+    border-bottom: 1px solid gainsboro;
 }
 
 #Subtotal {
     grid-column-start: 3;
+    display: flex;
+    justify-content: flex-end;
+    width: 100%;
     height: 50%;
-    border-bottom: 2px solid gainsboro;
+    padding: 8px;
+    border-bottom: 1px solid gainsboro;
 }
 
 #Subtotal-Price {
+    display: flex;
+    justify-content: flex-end;
+    width: 100%;
     grid-column-start: 4;
-    border-bottom: 2px solid gainsboro;
+    border-bottom: 1px solid gainsboro;
     height: 50%;
+    padding: 8px;
+}
+
+#Taxes {
+    display: flex;
+    justify-content: flex-end;
+    width: 100%;
+    grid-column-start: 3;
+    grid-column-end: 5;
+    height: 50%;
+    border-bottom: 1px solid gainsboro;
+    padding: 8px;
+    font-size: 16px;
+    font-weight: lighter;
+    letter-spacing: 0px;
+    line-height: 24px;
+    color: rgb(147, 160, 174);
+    cursor: pointer;
+
+}
+
+#Discount {
+    display: flex;
+    justify-content: flex-end;
+    width: 100%;
+    grid-column-start: 3;
+    grid-column-end: 5;
+    height: 50%;
+    padding: 8px;
+    margin-bottom: 30px;
+    font-size: 16px;
+    font-weight: lighter;
+    letter-spacing: 0px;
+    line-height: 24px;
+    color: rgb(147, 160, 174);
+    cursor: pointer;
+
 }
 
 #Total {
     grid-column-start: 3;
+    display: flex;
+    justify-content: flex-end;
+    width: 100%;
     height: 50%;
-    border-bottom: 2px solid gainsboro;
+    padding: 8px;
+    border-bottom: 1px solid gainsboro;
 }
 
 #Total-Price {
+    display: flex;
+    justify-content: flex-end;
+    width: 100%;
     grid-column-start: 4;
-    border-bottom: 2px solid gainsboro;
+    border-bottom: 1px solid gainsboro;
     height: 50%;
+    padding: 8px;
 }
 
 #Amount-Due {
     font-weight: 600;
     grid-column-start: 3;
-    border-bottom: 2px solid gainsboro;
+    display: flex;
+    justify-content: flex-end;
+    width: 100%;
     height: 50%;
+    padding: 8px;
 }
 
 #Amount-Price {
+    display: flex;
+    justify-content: flex-end;
+    width: 100%;
     grid-column-start: 4;
-    border-bottom: 2px solid gainsboro;
+    border-bottom: 1px solid gainsboro;
     height: 50%;
+    padding: 8px;
 }
 
 .WorkingDoc {
     margin-top: 20px;
+}
+
+.Gray-Text {
+    font-size: 16px;
+    font-weight: lighter;
+    letter-spacing: 0px;
+    line-height: 24px;
+    color: rgb(147, 160, 174);
+    cursor: pointer;
+}
+
+.Invoice-Button {
+    color: rgb(147, 160, 174);
+    background-color: rgb(255, 255, 255);
+    display: flex;
+    font-weight: 500;
+    height: 18px;
+    letter-spacing: 0.2px;
+    line-height: 18px;
+    text-transform: none;
+    width: auto !important;
+    border-radius: 2px;
+    padding: 0px 16px;
+    border-color: transparent;
 }
 
 @media only screen and (max-width: 1280px) {
