--- a/src/styles/WorkingDoc.css
+++ b/src/styles/WorkingDoc.css
@@ -1,5 +1,6 @@
 #Invoice-Page-Container {
-    font-family: "Helvetica Neue", sans-serif;
+    font-family: 'Roboto', sans-serif;
+    /* font-family: 'Archivo Narrow', sans-serif; */
     box-sizing: border-box;
     position: relative;
     height: 950px;
@@ -11,17 +12,19 @@
 }
 
 .Invoice-Settings {
+    font-family: 'Archivo Narrow', sans-serif;
     position: absolute;
-    top: 15px;
-    right: 30px;
+    font-size: 15px;
+    top: 10px;
+    right: 10px;
 }
 
 .Top-Third-Container {
     display: grid;
-    grid-template-rows: 50% 50%;
+    grid-template-rows: 45% 55%;
     grid-template-columns: 25% 55% 20%;
     height: 226px;
-    padding: 20px;
+    padding: 30px 20px 15px 20px;
 }
 
 .Middle-Third-Container {
@@ -34,6 +37,7 @@
     font-size: 14px;
     padding: 20px;
     height: 140px;
+    border-top: 1px solid gainsboro;
 }
 
 .Top-Right-Grid-Area {
@@ -72,7 +76,7 @@
 .Line-Items {
     display: grid;
     padding: 14px 10px 8px 10px;
-    grid-template-columns: 40% 20% 18% 22%;
+    grid-template-columns: 45% 15% 18% 22%;
     border-top: 1px solid gainsboro;
 }
 
@@ -98,7 +102,6 @@
     display: grid;
     grid-template-columns: 40% 20% 18% 22%;
     font-size: 14px;
-    border-bottom: 1px solid gainsboro;
 }
 
 #Subtotal {
@@ -157,6 +160,16 @@
 
 }
 
+#Add-Line-Item {
+    display: flex;
+    justify-content: flex-start;
+    width: 100%;
+    height: 50%;
+    padding: 8px;
+    /* padding: 8px 0 20px 20px; */
+    border-bottom: 1px solid gainsboro; 
+}
+
 #Total {
     grid-column-start: 3;
     display: flex;
@@ -177,6 +190,14 @@
     padding: 8px;
 }
 
+#Add-Notes {
+    display: flex;
+    justify-content: flex-start;
+    width: 100%;
+    height: 50%;
+    padding: 8px;
+}
+
 #Amount-Due {
     font-weight: 600;
     grid-column-start: 3;
@@ -192,7 +213,6 @@
     justify-content: flex-end;
     width: 100%;
     grid-column-start: 4;
-    border-bottom: 1px solid gainsboro;
     height: 50%;
     padding: 8px;
 }
@@ -203,7 +223,6 @@
 
 .Gray-Text {
     font-size: 16px;
-    font-weight: lighter;
     letter-spacing: 0px;
     line-height: 24px;
     color: rgb(147, 160, 174);
