Add hover logic to working doc

--- a/src/styles/WorkingDoc.css
+++ b/src/styles/WorkingDoc.css
@@ -11,58 +11,118 @@
     border-top: 3px solid #4caf50;   
 }
 
-.Invoice-Settings {
-    font-family: 'Archivo Narrow', sans-serif;
+.Edit-Container {
+    position: relative;
+}
+
+.Edit-Icon {
     position: absolute;
-    font-size: 15px;
-    top: 10px;
+}
+
+.hide {
+    display: none;
+    position: absolute;
+    top: 30px;
+    right: 30px;
+}
+
+.Invoice-Button {
+    display: flex;
+    align-items: center;
+    color: rgb(147, 160, 174);
+    background-color: rgb(255, 255, 255);
+    border-color: transparent;
+    border-radius: 2px;
+    padding: 0px 16px;
+    letter-spacing: 0.2px;
+    font-size: 14px;
+    font-family: 'Roboto', sans-serif;
+    cursor: pointer;
+}
+
+.Invoice-Button:hover {
+    box-shadow: none;
+    background-color: rgb(239, 242, 246);
+    color: rgb(22, 38, 55);
+}
+
+.Invoice-Settings {
+    font-weight: 800;
+    position: absolute;
+    top: 0;
     right: 10px;
 }
 
+.Gray-Text {
+    font-size: 14px;
+    font-family: 'Roboto', sans-serif;
+    letter-spacing: 0px;
+    color: rgb(147, 160, 174);
+    cursor: pointer;
+}
+
+.Gray-Text:hover {
+    box-shadow: none;
+    background-color: rgb(239, 242, 246);
+    color: rgb(22, 38, 55);
+}
+
+
 .Top-Third-Container {
     display: grid;
-    grid-template-rows: 45% 55%;
-    grid-template-columns: 25% 55% 20%;
+    position: relative;
+    grid-template-rows: 40% 60%;
+    grid-template-columns: 55% 25% 20%;
     height: 226px;
-    padding: 30px 20px 15px 20px;
+    padding: 38px 20px 0 20px;
+}
+
+.Top-Third-Container:hover {
+    box-shadow: none;
+    background-color: rgb(239, 242, 246);
 }
 
 .Middle-Third-Container {
-    font-size: 14px;
+    font-size: 12px;
     height: 435px;
-    padding: 8px 20px 20px 20px;
+    padding: 0 20px 40px 20px;
 }
 
 .Bottom-Third-Container {
-    font-size: 14px;
+    font-size: 12px;
     padding: 20px;
     height: 140px;
+    line-height: 1.3;
     border-top: 1px solid gainsboro;
 }
 
 .Top-Right-Grid-Area {
     font-size: 12px;
+    line-height: 1.8;
     font-weight: bold;
     grid-area: 1/3/2/3;
 }
 
 #Invoice-Title {
     color: #4caf50;
-    font-size: 34px;
+    font-size: 32px;
     margin: 0;
 }
 
 #Invoice-Total {
     font-size: 22px;
     font-weight: 500;
+    margin: 8px 0 4px 0;
+
 }
 
 #Client-Address-Area {
+    line-height: 1.4;
     grid-area: 2/1/2/1;
 }
 
 #Client-Address {
-    font-size: 14px;
+    font-size: 12px;
 }
 
 .Client-Customer {
@@ -75,7 +135,7 @@
 /* Invoice Items */
 .Line-Items {
     display: grid;
-    padding: 14px 10px 8px 10px;
+    padding: 14px 10px 8px 0;
     grid-template-columns: 45% 15% 18% 22%;
     border-top: 1px solid gainsboro;
 }
@@ -97,11 +157,11 @@
 /* Subtotal, Total, and Amount-Due */
 
 .Total-Info {
-    margin-top: 50px;
+    margin-top: 40px;
     justify-items: flex-end;
     display: grid;
     grid-template-columns: 40% 20% 18% 22%;
-    font-size: 14px;
+    font-size: 12px;
 }
 
 #Subtotal {
@@ -133,7 +193,7 @@
     height: 50%;
     border-bottom: 1px solid gainsboro;
     padding: 8px;
-    font-size: 16px;
+    font-size: 14px;
     font-weight: lighter;
     letter-spacing: 0px;
     line-height: 24px;
@@ -151,7 +211,7 @@
     height: 50%;
     padding: 8px;
     margin-bottom: 30px;
-    font-size: 16px;
+    font-size: 14px;
     font-weight: lighter;
     letter-spacing: 0px;
     line-height: 24px;
@@ -166,7 +226,11 @@
     width: 100%;
     height: 50%;
     padding: 8px;
-    /* padding: 8px 0 20px 20px; */
+    font-size: 14px;
+    letter-spacing: 0px;
+    line-height: 24px;
+    color: rgb(147, 160, 174);
+    cursor: pointer;
     border-bottom: 1px solid gainsboro; 
 }
 
@@ -196,6 +260,11 @@
     width: 100%;
     height: 50%;
     padding: 8px;
+    font-size: 14px;
+    letter-spacing: 0px;
+    line-height: 24px;
+    color: rgb(147, 160, 174);
+    cursor: pointer;
 }
 
 #Amount-Due {
@@ -217,32 +286,21 @@
     padding: 8px;
 }
 
+.Dev-Address {
+    margin-top: 0;
+    margin-bottom: 4px;
+}
+
+.Email {
+    margin-top: 0;
+    margin-bottom: 0;
+}
+
 .WorkingDoc {
     margin-top: 20px;
 }
 
-.Gray-Text {
-    font-size: 16px;
-    letter-spacing: 0px;
-    line-height: 24px;
-    color: rgb(147, 160, 174);
-    cursor: pointer;
-}
 
-.Invoice-Button {
-    color: rgb(147, 160, 174);
-    background-color: rgb(255, 255, 255);
-    display: flex;
-    font-weight: 500;
-    height: 18px;
-    letter-spacing: 0.2px;
-    line-height: 18px;
-    text-transform: none;
-    width: auto !important;
-    border-radius: 2px;
-    padding: 0px 16px;
-    border-color: transparent;
-}
 
 @media only screen and (max-width: 1280px) {
 
