--- a/src/styles/WorkingDoc.css
+++ b/src/styles/WorkingDoc.css
@@ -90,7 +90,7 @@
 
 .Bottom-Third-Container {
     font-size: 12px;
-    padding: 20px;
+    padding: 40px 8px;
     height: 140px;
     line-height: 1.3;
     border-top: 1px solid gainsboro;
