--- a/src/styles/WorkingDoc.css
+++ b/src/styles/WorkingDoc.css
@@ -8,7 +8,7 @@
     margin-right: auto;
     width: 750px;
     padding: 50px 60px 0 60px;
-    border-top: 3px solid #4caf50;   
+    border-top: 3px solid hsl(122, 39%, 49%);   
 }
 
 .Edit-Container {
@@ -33,7 +33,7 @@
     background-color: rgb(255, 255, 255);
     border-color: transparent;
     border-radius: 2px;
-    padding: 0px 16px;
+    padding: 10px 16px;
     letter-spacing: 0.2px;
     font-size: 14px;
     font-family: 'Roboto', sans-serif;
@@ -71,8 +71,10 @@
     position: relative;
     grid-template-rows: 40% 60%;
     grid-template-columns: 55% 25% 20% 60px;
-    height: 226px;
-    padding: 38px 20px 0 20px;
+    /* height: 226px; */
+    height: 206px;
+
+    padding: 30px 20px 0 20px;
 }
 
 .Top-Third-Container:hover {
@@ -82,13 +84,15 @@
 
 .Middle-Third-Container {
     font-size: 12px;
-    height: 435px;
+    /* height: 435px; */
+    height: 445px;
     padding: 0 20px 20px 20px;
 }
 
 .Bottom-Third-Container {
     font-size: 12px;
-    padding: 40px 8px;
+    padding: 30px 8px;
+    margin-top: 60px;
     height: 140px;
     line-height: 1.3;
     border-top: 1px solid gainsboro;
@@ -172,7 +176,8 @@
 /* Subtotal, Total, and Amount-Due */
 
 .Total-Info {
-    margin-top: 40px;
+    margin-top: 30px;
+    margin-bottom: 30px;
     justify-items: flex-end;
     display: grid;
     grid-template-columns: 25% 35% 18% 22%;
@@ -221,7 +226,7 @@
     justify-content: flex-end;
     grid-column-end: 5;
     padding: 8px;
-    margin-bottom: 40px;
+    margin-bottom: 30px;
     font-size: 14px;
     color: rgb(147, 160, 174);
     cursor: pointer;
