--- a/src/styles/WorkingDoc.css
+++ b/src/styles/WorkingDoc.css
@@ -313,14 +313,18 @@
     padding: 8px !important;
     text-transform: none !important;
     color: rgb(147, 160, 174) !important;
-
+    min-width: 0 !important;   
 }
 
-#Add-Line-Item:hover {
-    box-shadow: none;
+.MuiButton-root-177:hover {
+    color: rgb(22, 38, 55) !important;
+}
+
+/* #Add-Line-Item:hover {
+    box-shadow: none; 
     background-color: rgb(239, 242, 246);
     color: rgb(22, 38, 55);
-}
+} */
 
 #Total {
     grid-column-start: 3;
@@ -343,11 +347,23 @@
 }
 
 #Add-Notes {
+    display: flex;
+    justify-content: flex-start;
+    height: 60%;
+    padding: 0 8px 8px 0;
+   
     width: 100%;
     font-size: 14px;
     line-height: 24px;
     color: rgb(147, 160, 174);
     cursor: pointer;
+}
+
+.Notes-Container {
+    max-width: 700px;
+    margin: 0;
+    text-align: left;
+    overflow: hidden;
 }
 
 #Amount-Due {
@@ -377,6 +393,11 @@
 
 .WorkingDoc {
     margin-top: 20px;
+}
+
+/* notes modal */
+.MuiInput-root-268 {
+    position: static !important;
 }
 
 @media only screen and (max-width: 1280px) {
