--- a/src/styles/WorkingDoc.css
+++ b/src/styles/WorkingDoc.css
@@ -2,72 +2,11 @@
     font-family: 'Roboto', sans-serif;
     box-sizing: border-box;
     position: relative;
-    height: 900px;
     margin-left: auto;
     margin-right: auto;
     width: 750px;
     padding: 50px 60px 0 60px;
     border-top: 3px solid hsl(122, 39%, 49%);   
-}
-
-.Invoice-Page-Container-Medium {
-    font-family: 'Roboto', sans-serif;
-    box-sizing: border-box;
-    position: relative;
-    height: 950px;
-    margin-left: auto;
-    margin-right: auto;
-    width: 750px;
-    padding: 50px 60px 0 60px;
-    border-top: 3px solid hsl(122, 39%, 49%);   
-}
-
-.Invoice-Page-Container_Tall {
-    font-family: 'Roboto', sans-serif;
-    box-sizing: border-box;
-    position: relative;
-    margin-left: auto;
-    margin-right: auto;
-    width: 750px;
-    padding: 50px 60px 0 60px;
-    border-top: 3px solid hsl(122, 39%, 49%);   
-    height: 1050px !important;
-}
-
-.Invoice-Page-Container_Taller {
-    font-family: 'Roboto', sans-serif;
-    box-sizing: border-box;
-    position: relative;
-    margin-left: auto;
-    margin-right: auto;
-    width: 750px;
-    padding: 50px 60px 0 60px;
-    border-top: 3px solid hsl(122, 39%, 49%);   
-    height: 1150px !important;
-}
-
-.Invoice-Page-Container_Tallest {
-    font-family: 'Roboto', sans-serif;
-    box-sizing: border-box;
-    position: relative;
-    margin-left: auto;
-    margin-right: auto;
-    width: 750px;
-    padding: 50px 60px 0 60px;
-    border-top: 3px solid hsl(122, 39%, 49%);   
-    height: 1200px !important;
-}
-
-.Invoice-Page-Container_Yao {
-    font-family: 'Roboto', sans-serif;
-    box-sizing: border-box;
-    position: relative;
-    margin-left: auto;
-    margin-right: auto;
-    width: 750px;
-    padding: 50px 60px 0 60px;
-    border-top: 3px solid hsl(122, 39%, 49%);   
-    height: 1340px !important;
 }
 
 .Edit-Container {
@@ -144,20 +83,18 @@
 .Middle-Third-Container {
     font-size: 12px;
     min-height: 350px;
-    padding: 0 20px;
+    padding: 0 20px 20px 20px;
     display: flex;
     flex-direction: column;
     justify-content: space-between;
     padding-top: 10px;
-    padding-bottom: 50px;
-   
 }
 
 .Bottom-Third-Container {
+    position: relative;
     font-size: 12px;
     padding: 40px 8px;
-    /* margin-top: 60px; */
-    height: 140px;
+    height: 100px;
     line-height: 1.3;
     border-top: 1px solid gainsboro;
 }
@@ -197,12 +134,14 @@
     text-transform: uppercase;
 }
 
-.Line-Items:hover > .Line-Item-Icons {
-    display: flex;
+
+/* **************Line-Items******************* */
+
+.MuiSvgIcon-root-214:hover {
+    color: rgb(22, 38, 55);
 }
 
 .Line-Items  {
-    position: relative;
     display: grid;
     padding: 14px 10px 8px 0;
     grid-template-columns: 45% 15% 18% 22% 60px;
@@ -210,20 +149,43 @@
     border-top: 1px solid gainsboro;
 }
 
+.Line-Items:hover {
+    box-shadow: none;
+    background-color: rgb(239, 242, 246);
+    color: rgb(22, 38, 55);
+}
+
 .Line-Item-Icons {
+    display: flex;
     grid-column-start: 5;
-    display: none;
+    opacity: 0;
     padding-left: 20px;
     color: #aaa;
     cursor: pointer;
     max-height: 30px;
 }
 
-.Line-Items:hover {
+.Line-Item-Icons:hover {
+    opacity: 1;
+}
+
+.Line-Items:hover > .Line-Item-Icons {
+    opacity: 1;
+}
+
+
+
+.Line-Item-Icons:hover + * {
     box-shadow: none;
     background-color: rgb(239, 242, 246);
     color: rgb(22, 38, 55);
 }
+
+
+
+
+
+/* *************End of Line-Items********** */
 
 #Item-Total {
     display: flex;
@@ -284,7 +246,6 @@
     line-height: 24px;
     color: rgb(147, 160, 174);
     cursor: pointer;
-
 }
 
 #Discount {
@@ -301,12 +262,14 @@
 #Add-Line-Item {
     display: flex;
     justify-content: flex-start;
-    width: 100%;
     height: 60%;
-    padding: 0 8px 8px 8px;
+    padding: 0 8px 8px 0;
+    width: 100%;
     font-size: 14px;
+    line-height: 24px;
+    color: rgb(147, 160, 174);
     cursor: pointer;
-    border-bottom: 1px solid gainsboro; 
+    border-bottom: 1px solid gainsboro;
 }
 
 .MuiButton-root-177 {
@@ -318,6 +281,7 @@
 
 .MuiButton-root-177:hover {
     color: rgb(22, 38, 55) !important;
+    background-color: #FFF !important;
 }
 
 /* #Add-Line-Item:hover {
@@ -346,12 +310,26 @@
     padding: 8px 8px 0 8px;
 }
 
-#Add-Notes {
-    display: flex;
-    justify-content: flex-start;
+
+
+/*  *********Notes************ */
+
+
+.Notes {
+    display: grid;
+    padding-bottom: 14px;
+    grid-template-columns: 104% 60px;
+}
+
+.Notes:hover {
+    box-shadow: none;
+    background-color: rgb(239, 242, 246);
+    color: rgb(22, 38, 55);
+}
+
+.Add-Notes {
     height: 60%;
     padding: 0 8px 8px 0;
-   
     width: 100%;
     font-size: 14px;
     line-height: 24px;
@@ -359,12 +337,31 @@
     cursor: pointer;
 }
 
-.Notes-Container {
-    max-width: 700px;
-    margin: 0;
-    text-align: left;
-    overflow: hidden;
+.Notes:hover > .Notes-Icons {
+    opacity: 1;
+    padding: 0 10px;
 }
+
+.Notes-Icons {
+    opacity: 0;
+    display: flex;
+    align-items: center;
+    justify-content: flex-end;
+    margin-top: 10px;
+    color: #aaa;
+    cursor: pointer;
+}
+
+.Notes-Icons > *:hover {
+    color: rgb(22, 38, 55);
+}
+
+.Notes-Icons:hover {
+    opacity: 1;
+}
+
+/*  *********End of Notes******* */
+
 
 #Amount-Due {
     font-weight: 600;
@@ -393,11 +390,6 @@
 
 .WorkingDoc {
     margin-top: 20px;
-}
-
-/* notes modal */
-.MuiInput-root-268 {
-    position: static !important;
 }
 
 @media only screen and (max-width: 1280px) {
