--- a/src/styles/WorkingDoc.css
+++ b/src/styles/WorkingDoc.css
@@ -1,4 +1,8 @@
 .Invoice-Page-Container {
+    --green_background: #EEFFEC;
+    --green_highlight-text: #162637;
+    --green_standard: #4cae4f;
+
     font-family: 'Roboto', sans-serif;
     box-sizing: border-box;
     position: relative;
@@ -6,7 +10,6 @@
     margin-right: auto;
     width: 750px;
     padding: 50px 60px 0 60px;
-    border-top: 3px solid hsl(122, 39%, 49%);   
 }
 
 .Edit-Container {
@@ -40,8 +43,8 @@
 
 .Invoice-Button:hover {
     box-shadow: none;
-    background-color: rgb(239, 242, 246);
-    color: rgb(22, 38, 55);
+    background-color: #ababab;
+    color: #333;
 }
 
 .Invoice-Settings {
@@ -60,8 +63,8 @@
 
 .Gray-Text:hover {
     box-shadow: none;
-    background-color: rgb(239, 242, 246);
-    color: rgb(22, 38, 55);
+    background-color: #ababab;
+    color: #333;
 }
 
 .Top-Third-Container {
@@ -70,14 +73,12 @@
     grid-template-rows: 40% 60%;
     grid-template-columns: 55% 25% 20% 60px;
     height: 226px;
-    /* height: 206px; */
-
     padding: 30px 20px 0 20px;
 }
 
 .Top-Third-Container:hover {
     box-shadow: none;
-    background-color: rgb(239, 242, 246);
+    background-color: #ababab;
 }
 
 .Middle-Third-Container {
@@ -107,7 +108,6 @@
 }
 
 #Invoice-Title {
-    color: #4caf50;
     font-size: 32px;
     margin: 0;
 }
@@ -138,7 +138,7 @@
 /* **************Line-Items******************* */
 
 .MuiSvgIcon-root-214:hover {
-    color: rgb(22, 38, 55);
+    color: #333;
 }
 
 .Line-Items  {
@@ -151,8 +151,8 @@
 
 .Line-Items:hover {
     box-shadow: none;
-    background-color: rgb(239, 242, 246);
-    color: rgb(22, 38, 55);
+    background-color: #ababab;
+    color: #333
 }
 
 .Line-Item-Icons {
@@ -178,8 +178,8 @@
 
 .Line-Item-Icons:hover + * {
     box-shadow: none;
-    background-color: rgb(239, 242, 246);
-    color: rgb(22, 38, 55);
+    background-color: #ababab;
+    color: #333
 }
 
 /* *************End of Line-Items********** */
@@ -245,9 +245,17 @@
     cursor: pointer;
 }
 
+#Taxes:hover {
+    box-shadow: none;
+    background-color: #ababab;
+    color: #333
+}
+
 #Discount {
     display: flex;
     justify-content: flex-end;
+    width: 100%;
+    grid-column-start: 3;
     grid-column-end: 5;
     padding: 8px;
     margin-bottom: 40px;
@@ -256,17 +264,29 @@
     cursor: pointer;
 }
 
+#Discount:hover {
+    box-shadow: none;
+    background-color: #ababab;
+    color: #333
+}
+
 #Add-Line-Item {
     display: flex;
     justify-content: flex-start;
-    height: 39%;
-    padding: 0 0px 17px 0;
+    height: 50%;
+    padding: 8px 0;
     width: 100%;
     font-size: 14px;
     line-height: 24px;
     color: rgb(147, 160, 174);
     cursor: pointer;
     border-bottom: 1px solid gainsboro;
+}
+
+#Add-Line-Item:hover {
+    box-shadow: none;
+    /* background-color: #ababab */
+    color: #333
 }
 
 #Total {
@@ -300,8 +320,8 @@
 
 .Notes:hover {
     box-shadow: none;
-    background-color: rgb(239, 242, 246);
-    color: rgb(22, 38, 55);
+    background-color: #ababab;
+    color: #333
 }
 
 .Notes-Header > h3 {
@@ -310,14 +330,19 @@
 
 .Add-Notes {
     height: 60%;
-    /* padding: 0 8px 8px 0; */
     width: 100%;
+    padding: 8px 0;
     font-size: 14px;
     line-height: 24px;
     color: rgb(147, 160, 174);
     cursor: pointer;
 }
 
+.Add-Notes:hover {
+    box-shadow: none;
+    background-color: #ababab;
+    color: #333
+}
 .Notes:hover > .Notes-Icons {
     opacity: 1;
     padding: 0 10px;
@@ -332,7 +357,7 @@
 }
 
 .Notes-Icons > *:hover {
-    color: rgb(22, 38, 55);
+    color: #333
 }
 
 .Notes-Icons:hover {
