--- a/src/styles/Sidebars.css
+++ b/src/styles/Sidebars.css
@@ -6,6 +6,7 @@
     height: 800px;
 }
 
+
 .Header {
     display: flex;
     align-items: center;
@@ -23,19 +24,33 @@
     justify-content: space-between;
 }
 
+.Invoice-Sidebar {
+    height: 850px;
+    justify-content: space-between;
+}
+
+.Invoice-Title {
+    font-family: 'Roboto', sans-serif;
+    font-size: 18px;
+}
+
 .Equals {
     font-size: 20px;
     padding-top: 40px;
 }
 
 .Buttons-Container {
+    height: 84px;
+    border-top: 1px solid gainsboro;
+}
+
+.Buttons-Container-Discount {
     display: flex;
     height: 84px;
     align-content: flex-end;
     justify-content: flex-end;
     padding: 0 40px;
     border-top: 1px solid gainsboro;
-
 }
 
 .Cancel {
@@ -51,8 +66,8 @@
 
 /* .MuiSvgIcon-root-179 {
     font-size: 30px !important;
-}
+} */
 
 .MuiButton-label-187 {
-    font-size: 20px;
-} */
+    font-size: 18px;
+} 
