--- a/src/styles/Sidebars.css
+++ b/src/styles/Sidebars.css
@@ -17,21 +17,23 @@
     align-items: center;
     letter-spacing: 1px;
     margin: 0;
+    margin-bottom: 15px;
     padding: 0 0 0 40px;
     height: 72px;
-    border-bottom: 1px solid gainsboro;
+    /* border-bottom: 1px solid gainsboro; */
+    border-bottom: 3px solid rgb(77, 77, 77);
 }
 
 .PercAndVal {
     display: flex;
-    height: 796px;
+    height: 782px;
     padding: 24px 40px;
     justify-content: space-between;
 }
 
 .Tax-Sidebar {
     display: flex;
-    height: 750px;
+    height: 740px;
     padding: 24px 40px;
     justify-content: space-between;
 }
@@ -46,7 +48,7 @@
 }
 
 .Invoice-Sidebar {
-    height: 850px;
+    height: 825px;
     justify-content: space-between;
 }
 
@@ -62,7 +64,9 @@
 
 .Buttons-Container {
     height: 84px;
-    border-top: 1px solid gainsboro;
+    border-top: 3px solid rgb(77, 77, 77);
+
+    /* border-top: 1px solid gainsboro; */
 }
 
 .Buttons-Container-Discount {
@@ -71,7 +75,7 @@
     align-content: flex-end;
     justify-content: flex-end;
     padding: 0 40px;
-    border-top: 1px solid gainsboro;
+    border-top: 3px solid rgb(77, 77, 77);
 }
 
 .Cancel {
@@ -85,7 +89,7 @@
     font-family: 'Roboto', sans-serif;
     font-size: 14px;
     width: 400px;
-    height: 800px;
+    height: 792px;
 }
 
 .Submit {
