--- a/src/styles/WorkingDoc.css
+++ b/src/styles/WorkingDoc.css
@@ -71,7 +71,7 @@
     display: grid;
     position: relative;
     grid-template-rows: 40% 60%;
-    grid-template-columns: 55% 25% 20% 60px;
+    grid-template-columns: 55% 25% 17% 60px;
     height: 226px;
     padding: 30px 20px 0 20px;
 }
@@ -105,6 +105,10 @@
     line-height: 1.8;
     font-weight: bold;
     grid-area: 1/3/2/3;
+}
+
+.Top-Right-Grid-Area > div {
+    cursor: pointer;
 }
 
 #Invoice-Title {
