Make new date styles

--- a/src/styles/DateStyles.css
+++ b/src/styles/DateStyles.css
@@ -4,6 +4,7 @@
     display: block;
     width: 98%;
     height: 32px;
+    cursor: pointer;
 }
 
 .react-datepicker__day-names, .react-datepicker__week {
