--- a/src/styles/WorkingDoc.css
+++ b/src/styles/WorkingDoc.css
@@ -438,6 +438,10 @@
     margin-bottom: 4px;
 }
 
+.Dev-Address span {
+    padding-right: 5px;
+}
+
 .Email {
     margin-top: 0;
     margin-bottom: 0;
